--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "json-loader": "^0.5.7",
     "react-hot-loader": "^3.0.0-beta.2",
     "standard": "^12.0.1",
     "standard-loader": "^4.0.0",
@@ -26,8 +27,10 @@
   "dependencies": {
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
+    "markdown-it": "^10.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-markdown-editor-lite": "^0.5.0",
     "react-router-dom": "^5.1.2"
   }
 }
